# c-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  calc_unbounded_int.c  test_unbounded.c  unbounded_int.c  unbounded_int.h
Calc/: CMakeLists.txt
Calc/src/: calc_unbounded_int.c
Objects/: CMakelists.txt
Objects/include/: Buffer.h  ast.h  buffer.h  execerror.h  function.h  hashmap.h  stack.h  token.h  unbounded_int.h  variable.h
Objects/src/: Buffer.c  OLD_unbounded_int.c  ast.c  buffer.c  function.c  hashmap.c  stack.c  token.c  unbounded_int.c  variable.c
Objects/test/: test_unbounded_int.c
Test/: CMakeLists.txt  CMakelists.txt
Test/src/: OLD_test_unbounded.c  test_unbounded_int.c
enc_temp_folder/f82fd8d27d3765f96fde63ec5cd3fd9/: test_unbounded_int.c
headers/: unbounded_int.h
src/: appinformations.h  ast.c  ast.h  buffer.c  buffer.h  calc_unbounded_int.c  execerror.c  execerror.h  function.h  hashmap.c  hashmap.h  lib.h  statck.c  token.c  token.h  unbounded_int.c  unbounded_int.h
test/: test_unbounded.c
